--- a/F-E/src/App.css
+++ b/F-E/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+body {
+    font-family: "Nunito", sans-serif;
+    /* background-color: #f8f9fa; */
+    margin: 0;
+    padding: 0;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
