--- a/F-E/src/App.css
+++ b/F-E/src/App.css
@@ -8,12 +8,29 @@
 }
 
 body {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    /* background-color: #1f1f1f;    */
+    /* background-color:#91D2FC; */
     font-family: "Nunito", sans-serif;
-    /* background-color: #f8f9fa; */
-    margin: 0;
-    padding: 0;
+    font-size: 16px;
 }
 
+nav .Container{
+      font-weight: 800;
+      background-color:#2C9DE8;
+      
+  /* background-color: #dee2e6; */
+
+}
+table{
+}
+table tbody{
+        font-weight: 600;
+        color: #D7D4D4;
+
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -44,3 +61,4 @@ body {
     transform: rotate(360deg);
   }
 }
+
