--- a/F-E/src/index.css
+++ b/F-E/src/index.css
@@ -1,17 +1,40 @@
 
 
-
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    padding: 0px;
+    margin: 0px;
+}
+*,::after,::before{
+    box-sizing: border-box;
 }
 
-code {
+body {
+  /* margin: 0; */
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif; */
+  /* -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
+
+  /* font-family: 'Jost', sans-serif;
+
+      background: #ffffff;
+    color: #333333;
+    font-size: 14px;
+    font-family: var(--primaryfont);
+   
+    font-weight: 400; */
+
+     width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    background-color: #1f1f1f;   
+    font-family: "Nunito", sans-serif;
+    font-weight: 800;
+    font-size: 16px;
+}
+
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
@@ -24,7 +47,7 @@ code {
       overflow: hidden;
       text-overflow: ellipsis;
       display: -webkit-box;
-      -webkit-line-clamp: 3; /* number of lines to show */
+      -webkit-line-clamp: 3; 
       -webkit-box-orient: vertical;
     }
  
@@ -51,4 +74,5 @@ code {
       .ticket-footer {
         font-size: 0.85rem;
         color: #555;
-      }
+      } */
+
